# Tokenized-Bio-Hedge-Fund

./: .env.example  .gitignore  EXPERIMENTS.md  HARDWARE_BENCHMARKING.md  MANIFEST.md  README.md  RESEARCH_ARTICLE.md  capital_optimizer.py  full_optimizer.py  plot_experiments.py  pyproject.toml  run_experiments.py  scripts_readme.md  stress_test.py
Grant Proposals/: proposal_synthesis.md  technical_requirements.md
bioalpha/: __init__.py  cli.py  config.py
bioalpha/actuators/: __init__.py  dispatcher.py
bioalpha/agents/: __init__.py  base.py  environment_agent.py  governor.py  nutrient_agent.py
bioalpha/bridge/: __init__.py  serial_bridge.py
bioalpha/ledger/: __init__.py  vault.py
bioalpha/sensors/: __init__.py  simulator.py
bioalpha/simulation/: __init__.py  engine.py  model.py
docs/: AGENT_ROSTER.md  ARCHITECTURE.md  Grant.md  WALKTHROUGH.md  cadcad_ALife_Grant.md
docs/plans/: INITIAL_PLAN.md  PHASE_1.md  PHASE_2.md
experiments/: capital_optimizer.py  full_optimizer.py  run_experiments.py  stress_test.py
firmware/: bioalpha_v1.ino
hardware/docs/: BOM.md  RESEARCH.md  WIRING.md
hardware/firmware/: bioalpha_v1.ino
research/: BENCHMARKING.md  DIFFERENTIATION.md  MANIFEST.md  RESEARCH_ARTICLE.md
scripts/: plot_experiments.py
