[project]
name = "bioalpha"
version = "0.1.0"
description = "Bio-Alpha Autonomous Fund — Quant-focused Cyber-Physical Economic System"
requires-python = ">=3.12"
dependencies = [
    "pyserial>=3.5",
    "opencv-python>=4.9",
    "Pillow>=10.0",
    "rich>=13.0",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.3",
]
rpi = [
    "picamera2>=0.3",
]

[project.scripts]
bioalpha = "bioalpha.cli:main"

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.pytest.ini_options]
asynchio_mode = "auto"
testpaths = ["tests"]
